style: Fix text alignment in h1 element in styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,7 @@ h1 {
   font-weight: 400;
   line-height: 0.8;
   margin: 0;
-  text-align:center
+  text-align: center;
 }
 
 h2 {
